--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -12,5 +12,16 @@
     "Noticias": "Noticias",    
     "Gestión": "Gestión",   
     "Inventario": "Inventario", 
-    "Envios": "Envios"       
+    "Envios": "Envios",
+    "Todo el contenido tiene derechos de autor © y marcas registradas de sus respectivos dueños. Reservados todos los derechos.": "Todo el contenido tiene derechos de autor © y marcas registradas de sus respectivos dueños. Reservados todos los derechos.",
+    "Privacidad y Cookies": "Privacidad y Cookies",
+    "Aviso Legal": "Aviso Legal",
+    "Formas de pago": "Formas de pago",
+    "Contacto": "Contacto",
+    "Leer más": "Leer más",
+    "TODOS LOS VOLUMENES": "TODOS LOS VOLUMENES",
+    "CATÁLOGO": "CATÁLOGO",
+    "VER SERIES": "VER SERIES",
+    "Anterior": "Anterior",
+    "Siguiente": "Siguiente"
 }
