--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,16 +1,28 @@
 {
     "Últimas Noticias": "Latest News",
-    "Mantente al día de las últimas licencias y novedades de nuestro catálogo.": "Stay up to date with the latest licenses and updates from our catalog.",
-    "Novedades Recientes": "Recent Updates",
+    "Mantente al día de las últimas licencias y novedades de nuestro catálogo.": "Stay up to date with the latest licenses and news from our catalog.",
+    "Novedades Recientes": "Recent Releases",
     "Catálogo": "Catalog",
-    "Comic Europeo": "European Comic",
+    "Comic Europeo": "European Comics",
     "Manga": "Manga",
-    "Comic Estadounidense": "American Comic",
+    "Comic Estadounidense": "American Comics",
     "Libros Ilustrados": "Illustrated Books",
-    "Catálogo Completo": "Complete Catalog",
+    "Catálogo Completo": "Full Catalog",
     "Novedades": "New Releases",
     "Noticias": "News",
     "Gestión": "Management",
     "Inventario": "Inventory",
-    "Envios": "Shipments"
+    "Envios": "Shipping",
+    "Todo el contenido tiene derechos de autor © y marcas registradas de sus respectivos dueños. Reservados todos los derechos.": "All content is copyrighted © and trademarked by their respective owners. All rights reserved.",
+    "Privacidad y Cookies": "Privacy and Cookies",
+    "Aviso Legal": "Legal Notice",
+    "Formas de pago": "Payment Methods",
+    "Contacto": "Contact",
+    "Leer más": "Read More",
+    "TODOS LOS VOLUMENES": "ALL VOLUMES",
+    "CATÁLOGO": "CATALOG",
+    "VER SERIES": "VIEW SERIES",
+    "Anterior": "Previous",
+    "Siguiente": "Next"
 }
+
