--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,12 +17,18 @@
     "Privacidad y Cookies": "Privacy and Cookies",
     "Aviso Legal": "Legal Notice",
     "Formas de pago": "Payment Methods",
-    "Contacto": "Contact",
+    "Acerca de...": "About...",
     "Leer más": "Read More",
     "TODOS LOS VOLUMENES": "ALL VOLUMES",
     "CATÁLOGO": "CATALOG",
     "VER SERIES": "VIEW SERIES",
     "Anterior": "Previous",
-    "Siguiente": "Next"
+    "Siguiente": "Next",
+    "NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP": "NEW STORIES THAT DELE INTO HELLBOY'S PAST AS AN AIDP AGENT",
+    "Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.": "A new edition of Gustav Strobl's Witchcraft and Demonology wreaks havoc. A ghost haunts a mass grave. Woody's doubts as AIDP cryptozoologist. A were-tiger threatens a town in India. There is something hidden in an old laboratory of the Heliopic Brotherhood of Ra. An invocation to celebrate the new year. Six new adventures from Hellboy's past.",
+    "¡Comienza la segunda fase del proyecto BLUE LOCK!": "The second phase of the BLUE LOCK project begins!",
+    "¡Los egoístas lucharán en aún más campos de batalla! Tras ganar el gran partido contra la selección japonesa de Sub-20, Isagi y el resto de chicos de BLUE LOCK se han convertido en auténticos héroes. ¡Mientras los delanteros gozan de unas breves vacaciones, Jinpachi Ego ya les está preparando un nuevo desafío!": "The egoist will fight on even more battlefields! After winning the big match against the Japanese U-20 team, Isagi and the rest of the BLUE LOCK boys have become true heroes. While the forwards are enjoying a short vacation, Jinpachi Ego is already preparing a new challenge for them!",
+    "¡¡Aquí tenéis una historia de piratas que buscan el gran tesoro, el One Piece!!": "Here you have a story about pirates looking for the great treasure, the One Piece!!",
+    "La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk!": "The Straw Hat gang arrives on the island of the future Egghead. There is Dr. Vegapunk's laboratory, where Luffy's adventurous heart beats with force when seeing unknown technologies! But here comes CP-0 to eliminate Vegapunk!!"
 }
 
