--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,11 +17,18 @@
     "Privacidad y Cookies": "Privacidad y Cookies",
     "Aviso Legal": "Aviso Legal",
     "Formas de pago": "Formas de pago",
-    "Contacto": "Contacto",
+    "Acerca de...": "Acerca de...",
     "Leer más": "Leer más",
     "TODOS LOS VOLUMENES": "TODOS LOS VOLUMENES",
     "CATÁLOGO": "CATÁLOGO",
     "VER SERIES": "VER SERIES",
     "Anterior": "Anterior",
-    "Siguiente": "Siguiente"
+    "Siguiente": "Siguiente",
+    "NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP": "NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP",
+    "Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.": "Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.",
+    "¡Comienza la segunda fase del proyecto BLUE LOCK!": "¡Comienza la segunda fase del proyecto BLUE LOCK!",
+    "¡Los egoístas lucharán en aún más campos de batalla! Tras ganar el gran partido contra la selección japonesa de Sub-20, Isagi y el resto de chicos de BLUE LOCK se han convertido en auténticos héroes. ¡Mientras los delanteros gozan de unas breves vacaciones, Jinpachi Ego ya les está preparando un nuevo desafío!": "¡Los egoístas lucharán en aún más campos de batalla! Tras ganar el gran partido contra la selección japonesa de Sub-20, Isagi y el resto de chicos de BLUE LOCK se han convertido en auténticos héroes. ¡Mientras los delanteros gozan de unas breves vacaciones, Jinpachi Ego ya les está preparando un nuevo desafío!",
+    "¡¡Aquí tenéis una historia de piratas que buscan el gran tesoro, el One Piece!!": "¡¡Aquí tenéis una historia de piratas que buscan el gran tesoro, el One Piece!!",
+    "La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk!": "La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk!"
+    
 }
