--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,7 @@
     "Libros Ilustrados": "Illustrated Books",
     "Catálogo Completo": "Full Catalog",
     "Novedades": "New Releases",
+    "NOVEDADES": "NEW RELEASES",
     "Noticias": "News",
     "Gestión": "Management",
     "Inventario": "Inventory",
@@ -19,11 +20,18 @@
     "Formas de pago": "Payment Methods",
     "Acerca de...": "About...",
     "Leer más": "Read More",
+    "Leer mas...": "Read More...",
     "TODOS LOS VOLUMENES": "ALL VOLUMES",
     "CATÁLOGO": "CATALOG",
     "VER SERIES": "VIEW SERIES",
     "Anterior": "Previous",
     "Siguiente": "Next",
+    "OCTUBRE": "OCTOBER",
+    "NOVIEMBRE": "NOVEMBER",
+    "DICIEMBRE": "DECEMBER",
+    "ACTUALIDAD": "TOPICALITY",
+    "NOTICIAS": "NEWS",
+    "VER TODAS": "SEE ALL",
     "NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP": "NEW STORIES THAT DELE INTO HELLBOY'S PAST AS AN AIDP AGENT",
     "Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.": "A new edition of Gustav Strobl's Witchcraft and Demonology wreaks havoc. A ghost haunts a mass grave. Woody's doubts as AIDP cryptozoologist. A were-tiger threatens a town in India. There is something hidden in an old laboratory of the Heliopic Brotherhood of Ra. An invocation to celebrate the new year. Six new adventures from Hellboy's past.",
     "¡Comienza la segunda fase del proyecto BLUE LOCK!": "The second phase of the BLUE LOCK project begins!",
