--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,6 +9,7 @@
     "Libros Ilustrados": "Libros Ilustrados",
     "Catálogo Completo": "Catálogo Completo",
     "Novedades": "Novedades",
+    "NOVEDADES": "NOVEDADES",
     "Noticias": "Noticias",    
     "Gestión": "Gestión",   
     "Inventario": "Inventario", 
@@ -19,11 +20,18 @@
     "Formas de pago": "Formas de pago",
     "Acerca de...": "Acerca de...",
     "Leer más": "Leer más",
+    "Leer mas...": "Leer mas...",
     "TODOS LOS VOLUMENES": "TODOS LOS VOLUMENES",
     "CATÁLOGO": "CATÁLOGO",
     "VER SERIES": "VER SERIES",
     "Anterior": "Anterior",
     "Siguiente": "Siguiente",
+    "OCTUBRE": "OCTUBRE",
+    "NOVIEMBRE": "NOVIEMBRE",
+    "DICIEMBRE": "DICIEMBRE",
+    "ACTUALIDAD": "ACTUALIDAD",
+    "NOTICIAS": "NOTICIAS",
+    "VER TODAS": "VER TODAS",
     "NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP": "NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP",
     "Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.": "Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.",
     "¡Comienza la segunda fase del proyecto BLUE LOCK!": "¡Comienza la segunda fase del proyecto BLUE LOCK!",
